Test for forward to SOUTH

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,14 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 
 
 </project>
